# ChangeLog for dev-python/matplotlib
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/matplotlib/ChangeLog,v 1.67 2009/07/23 02:59:38 bicatali Exp $

  23 Jul 2009; Sébastien Fabbro <bicatali@gentoo.org>
  -matplotlib-0.98.5.2.ebuild, matplotlib-0.98.5.3.ebuild, metadata.xml:
  unset the DISPLAY, bug #278524, thanks to Pinky

*matplotlib-0.98.5.3 (15 Jun 2009)

  15 Jun 2009; Sébastien Fabbro <bicatali@gentoo.org>
  -matplotlib-0.98.5.2.ebuild, -matplotlib-0.98.5.2-r2.ebuild,
  -matplotlib-0.98.5.2-r3.ebuild, +matplotlib-0.98.5.3.ebuild:
  Version bumps with fixes for bug #266612 and bug #272147

  30 May 2009; Ulrich Mueller <ulm@gentoo.org>
  matplotlib-0.98.5.2-r2.ebuild, matplotlib-0.98.5.2-r3.ebuild:
  Remove app-text/tetex from dependencies, bug 227443.

  30 Mar 2009; Peter Alfredsen <loki_val@gentoo.org>
  matplotlib-0.91.2.ebuild, matplotlib-0.91.4.ebuild,
  matplotlib-0.98.5.2.ebuild, matplotlib-0.98.5.2-r2.ebuild,
  matplotlib-0.98.5.2-r3.ebuild:
  Update dependencies w.r.t. bug 264230, fully-split-out poppler transition.

  14 Mar 2009; Sébastien Fabbro <bicatali@gentoo.org>
  matplotlib-0.91.2.ebuild, matplotlib-0.91.4.ebuild:
  Switch to EAPI 2

  09 Mar 2009; Sébastien Fabbro <bicatali@gentoo.org>
  matplotlib-0.98.5.2-r3.ebuild:
  Added latex-unicode for doc building when tetex or ptex are selected

  28 Feb 2009; Sébastien Fabbro <bicatali@gentoo.org>
  files/matplotlib-0.98.5.2-no-xv.patch, matplotlib-0.98.5.2-r3.ebuild:
  More documentation building fixes: added graphviz dependency, and applied
  patch on doc examples instead of regular examples

  27 Feb 2009; Sébastien Fabbro <bicatali@gentoo.org>
  +files/matplotlib-0.98.5.2-no-xv.patch, matplotlib-0.98.5.2-r3.ebuild:
  Added more dependencies to build documentation and a patch to avoid to
  launch xv during doc compilation when imaging is installed. Closing bug
  #260446 and bug #260431

*matplotlib-0.98.5.2-r3 (25 Feb 2009)
