@@ -2,6 +2,8 @@ AUX matplotlib-0.98.5.2-literal.patch 308 RMD160 2d96faf45f2a163df5b7f68e3237178
 AUX matplotlib-0.98.5.2-no-xv.patch 368 RMD160 e0d3cf32f2e74f2f6b9dbcb1de603e5588d9be92 SHA1 a4671aac2912d32646d14245d2d25b3a088887b9 SHA256 c03edfaca5b01335b126b88de423923229ec9418d0f81093ff109004c155931d
 AUX matplotlib-0.98.5.3-prefix.patch 1300 RMD160 bfa229c27fb6f433ccc6cab80685b37ffed6720a SHA1 ce43b1afe9a3b328d7c6a0faa7fc874c6e1bf043 SHA256 a13c3d2f8f908f24375f9dc1dd1671d918932d555fa9b9cb0d8a95460b8967f2
 DIST matplotlib-0.98.5.3.tar.gz 11549895 RMD160 e884893b8c7b44b38dcd93556f64095a1923ad9f SHA1 2f6c894cf407192b3b60351bcc6468c0385d47b6 SHA256 f8d355624a76e4a69676381546e307378b2b8a0b30ff08d968840a43460a79df
-EBUILD matplotlib-0.98.5.3.ebuild 4892 RMD160 7083d2d5bd79baa9340d298f88e312866f64a31f SHA1 459c91ed36060221a253fd634e0cf315cd8457f0 SHA256 876213382c4511bfd8cb3ac37f0181a6cc12e6dfcfdaef315d7319d27aec44d3
-MISC ChangeLog 13880 RMD160 06fecd5fa740a5be23d92b081d7eb5bee179f6a5 SHA1 6e7e5ec059d910de5f5506e78c8c2afa4ad69b88 SHA256 4e0b6793f56aaf9391939586b077a4aa8207c25b2bf830c73897bcd1bb86e60b
+DIST matplotlib-0.99.0.tar.gz 11762345 RMD160 e69f3d6c877e2854becf71a25e4ba56f2ced8735 SHA1 5c267e96ecebe0654683b6325f423c53ae5ccd39 SHA256 f85ec0f69fcfe2bb19700817f7683ce278461f22924971c7c99907374a4b332b
+EBUILD matplotlib-0.98.5.3.ebuild 4950 RMD160 c7bada7803665b4a928d35bb41e08d643613868d SHA1 c6c996437e2d560d060013beb084ccdc1d63aaf4 SHA256 63838c7aa91755403afbf788c5f3c7fe12fdcbfa363431ea34ae0be946e0c712
+EBUILD matplotlib-0.99.0.ebuild 4959 RMD160 6a2283762315a72c5fbd6c9290897d96eb1c8295 SHA1 5462561f1c0f5a50c6698165a3511599d914347c SHA256 4ec1c0fbde92343c0a5bacbbfb66d2a20a64b2d1f456353968a6d085a041eded
+MISC ChangeLog 14161 RMD160 ad5f51ea6b0d13296de90d5335d857badb9f1e3d SHA1 ae47f39655f6a5c345ac51393d27e882d7aa2eb8 SHA256 5c92a852486a28b18dd0f8aebed09b7031d0bb26d77ffecdfad8ec2ded9f71f9
 MISC metadata.xml 640 RMD160 5a3412572c06b5f54b7570a6d42e503b5711b8b9 SHA1 dbdefc26499cd67470a363f54fcb928f2f510fcf SHA256 6643fb3ec5019f58c1a7af76a25d791f1109c37929b3332ddbe1a2911f5de3b4
