@@ -1,6 +1,16 @@
 # ChangeLog for dev-python/matplotlib
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/matplotlib/ChangeLog,v 1.67 2009/07/23 02:59:38 bicatali Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/matplotlib/ChangeLog,v 1.69 2009/08/08 03:27:05 bicatali Exp $
+
+*matplotlib-0.99.0 (08 Aug 2009)
+
+  08 Aug 2009; Sébastien Fabbro <bicatali@gentoo.org>
+  +matplotlib-0.99.0.ebuild:
+  Version bump
+
+  06 Aug 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  matplotlib-0.98.5.3.ebuild:
+  Update dependency on media-gfx/graphviz.
 
   23 Jul 2009; Sébastien Fabbro <bicatali@gentoo.org>
   -matplotlib-0.98.5.2.ebuild, matplotlib-0.98.5.3.ebuild, metadata.xml:
